--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Rubix main.cpp
         Model/RubiksCube.h
-        Model/RubiksCube.cpp)
+        Model/RubiksCube.cpp
+        Model/RubiksCube3dArray.cpp)
