--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Rubix main.cpp
         Model/RubiksCube.h
         Model/RubiksCube.cpp
-        Model/RubiksCube3dArray.cpp)
+        Model/RubiksCube3dArray.cpp
+        Model/RubiksCube1dArray.cpp
+        Model/RubiksCubeBitboard.cpp)
